add_subdirectory(tst_qniteartist)
add_subdirectory(tst_qniteaxes)
add_subdirectory(tst_qnitecircle)
add_subdirectory(tst_qniteclipper)
add_subdirectory(tst_qnitelinearmapper)
add_subdirectory(tst_qnitelinearticker)
add_subdirectory(tst_qnitemapper)
add_subdirectory(tst_qnitepathselectiontool)
add_subdirectory(tst_qniteselectiontool)
add_subdirectory(tst_qniteticker)
add_subdirectory(tst_qnitetool)
add_subdirectory(tst_qnitezoomtool)
